feat(testing-docs): phase 10 — JaCoCo aggregate, CI master branch, defense docs
Backend:
- congvan-app/pom.xml: thêm jacoco:report-aggregate execution bound vào
  verify phase. Aggregate exec từ tất cả modules → coverage report
  duy nhất ở target/site/jacoco-aggregate.
- Coverage hiện tại (38 integration tests + Testcontainers):
    Lines        2281/2908 (78.4%)
    Methods       380/518  (73.4%)
    Instructions 11222/14792 (75.9%)
- Module nghiệp vụ ≥80%: inbound 87%, outbound 85%, ocr 85%, search 88%,
  signature 85%, workflow 86%. Auth 74%, masterdata 70%.

CI:
- Tất cả workflows trigger thêm master branch (project dùng master, không develop).

Documentation — docs/defense/:
- 00_business_rules.md: bảng 14 BR ↔ pháp lý/file/migration/test
- 01_architecture.md: multi-module + event-driven + outbox/SignatureGate
- 02_security.md: JWT/Argon2id/BR-12/PAdES/OWASP threats
- 03_compliance.md: NĐ 30/2020 + Luật GDĐT 2023 + Luật ATTTM 2015 mapping
- 04_demo_script.md: kịch bản 15 phút bảo vệ NCKH

README.md tổng cập nhật với phases done, coverage, BR matrix, demo flow.
CHANGELOG.md đầy đủ 11 phases (0.0.0 → 0.10.0).